Seção 1 e 2 do markdown feitos!

--- a/Estudo_Faltas_2.ipynb
+++ b/Estudo_Faltas_2.ipynb
@@ -1,12 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Projeto de Probabilidade: Título a Decidir\n",
+    "por Gildo Augusto, Phelipe Henrique e Wanderson Alves\n",
+    "\n",
+    "# 1 - Introdução\n",
+    "\n",
+    "Neste Notebook, mostraremos a influência das faltas dos Alunos no seu desempenho acadêmico, referente ao período dos semestre de 2016.2, 2017.1 e 2017.2 em algumas disciplinas do Bacharelado em Tecnologia da Informação da UFRN (Universidade Federal do Rio Grande do Norte). Para essa representação utilizamos gráficos, através das bibliotecas Seaborn e Matplotlib da linguagem Pyhton 3, que torna possível uma melhor análise.\n",
+    "\n",
+    "O Notebook está organizado da maneira a seguir: \n",
+    "    - Seção 2: detalhes sobre o dataset que contém informações dos discentes. \n",
+    "    - Seção 3: a representação dos gráficos que mostram a média do número de faltas de algumas disciplinas e a situação do aluno em questão (Aprovado, Aprovado por nota, Reprovado e Reprovados por média e por faltas). \n",
+    "    - Seção 4: os gráficos que possui o número médio de faltas dos discentes nas disciplinas mostradas anteriormente dos 3 últimos semestres para a comparação dos mesmos.\n",
+    "    - Seção 5: a conclusão e apontametos obtidos através do estudo feito."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 - Dataset Ensino\n",
+    "* As informações presentes no dataset são do Portal de Dados Abertos da UFRN (http://dados.ufrn.br/dataset/turmas)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# boas práticas: criar uma célula com todas as bibliotecas necessárias\n",
+    "# Boas práticas: criar uma célula com todas as bibliotecas necessárias\n",
     "# importando as bibliotecas necessárias\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
