--- a/Estudo_Faltas_2.ipynb
+++ b/Estudo_Faltas_2.ipynb
@@ -116,21 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 227,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'id_componente'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-220-1e7f7dcd6ead>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# Limpando o dataframe disciplinas com linhas desnecessárias\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mdisciplinas\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdisciplinas\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mdisciplinas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mid_componente\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mduplicated\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m# Pegando apenas as disciplinas do IMD\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'id_componente'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Adaptando o dataframe turma e disciplinas para o merge\n",
     "# Esse procedimento é necessário pois o dataframe turma está codificado com ids\n",
@@ -149,15 +137,152 @@
     "disciplinas = disciplinas[~disciplinas.id_componente.duplicated()]\n",
     "\n",
     "# Pegando apenas as disciplinas do IMD\n",
-    "disciplinas = disciplinas[disciplinas.unidade_responsavel == 'INSTITUTO METROPOLE DIGITAL']\n",
-    "disciplinas.head()"
+    "disciplinas = disciplinas[disciplinas.unidade_responsavel == 'INSTITUTO METROPOLE DIGITAL']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 228,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_turma</th>\n",
+       "      <th>codigo</th>\n",
+       "      <th>nivel_ensino</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>unidade_responsavel</th>\n",
+       "      <th>situacao_turma</th>\n",
+       "      <th>capacidade_aluno</th>\n",
+       "      <th>descricao_horario</th>\n",
+       "      <th>ano</th>\n",
+       "      <th>periodo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>57608376</td>\n",
+       "      <td>IMD0017</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>CONSOLIDADA</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>5N34 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>57608377</td>\n",
+       "      <td>IMD0019</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>CONSOLIDADA</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>246M3456 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57608377</td>\n",
+       "      <td>IMD0019</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>CONSOLIDADA</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>246M3456 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57608377</td>\n",
+       "      <td>IMD0019</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>CONSOLIDADA</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>246M3456 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57608378</td>\n",
+       "      <td>IMD0019</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>CONSOLIDADA</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>246N1234 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_turma   codigo nivel_ensino  \\\n",
+       "0  57608376  IMD0017    GRADUAÇÃO   \n",
+       "1  57608377  IMD0019    GRADUAÇÃO   \n",
+       "2  57608377  IMD0019    GRADUAÇÃO   \n",
+       "3  57608377  IMD0019    GRADUAÇÃO   \n",
+       "4  57608378  IMD0019    GRADUAÇÃO   \n",
+       "\n",
+       "                                           nome          unidade_responsavel  \\\n",
+       "0  PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I  INSTITUTO METROPOLE DIGITAL   \n",
+       "1    RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI  INSTITUTO METROPOLE DIGITAL   \n",
+       "2    RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI  INSTITUTO METROPOLE DIGITAL   \n",
+       "3    RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI  INSTITUTO METROPOLE DIGITAL   \n",
+       "4    RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI  INSTITUTO METROPOLE DIGITAL   \n",
+       "\n",
+       "  situacao_turma  capacidade_aluno                   descricao_horario   ano  \\\n",
+       "0    CONSOLIDADA              60.0      5N34 (24/07/2017 - 16/12/2017)  2017   \n",
+       "1    CONSOLIDADA              65.0  246M3456 (24/07/2017 - 16/12/2017)  2017   \n",
+       "2    CONSOLIDADA              65.0  246M3456 (24/07/2017 - 16/12/2017)  2017   \n",
+       "3    CONSOLIDADA              65.0  246M3456 (24/07/2017 - 16/12/2017)  2017   \n",
+       "4    CONSOLIDADA              67.0  246N1234 (24/07/2017 - 16/12/2017)  2017   \n",
+       "\n",
+       "   periodo  \n",
+       "0        2  \n",
+       "1        2  \n",
+       "2        2  \n",
+       "3        2  \n",
+       "4        2  "
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fazendo um merge entre o dataframe turmas e disciplinas utilizando como base a coluna id_componente\n",
     "# https://pandas.pydata.org/pandas-docs/stable/merging.html\n",
@@ -167,7 +292,9 @@
     "# Merge os dois dataframes utilizando como base a coluna id_componente.\n",
     "disciplinas_turma_2017_2 = pd.merge(turmas_2017_2, disciplinas, on='id_componente')[colunas]\n",
     "disciplinas_turma_2017_1 = pd.merge(turmas_2017_1, disciplinas, on='id_componente')[colunas]\n",
-    "disciplinas_turma_2016_1 = pd.merge(turmas_2016_1, disciplinas, on='id_componente')[colunas]"
+    "disciplinas_turma_2016_1 = pd.merge(turmas_2016_1, disciplinas, on='id_componente')[colunas]\n",
+    "\n",
+    "disciplinas_turma_2017_2.head()"
    ]
   },
   {
@@ -181,7 +308,7 @@
     "# Merge de turma com as notas dos 3 semestres trabalhados.\n",
     "notas_turma_turma_2017_2 = pd.merge(disciplinas_turma_2017_2, notas_2017_2, on='id_turma')[colunas_relevantes]\n",
     "notas_turma_turma_2017_1 = pd.merge(disciplinas_turma_2017_1, notas_2017_1, on='id_turma')[colunas_relevantes]\n",
-    "notas_turma_turma_2016_1 = pd.merge(disciplinas_turma_2016_1, notas_2016_1, on='id_turma')[colunas_relevantes]"
+    "notas_turma_turma_2016_1 = pd.merge(disciplinas_turma_2016_1, notas_2016_1, on='id_turma')[colunas_relevantes]\n"
    ]
   },
   {
