Ajeitando alguns erros nos markdown do notebook

--- a/Estudo_Faltas_2.ipynb
+++ b/Estudo_Faltas_2.ipynb
@@ -299,16 +299,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_turma</th>\n",
+       "      <th>codigo</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>descricao_horario</th>\n",
+       "      <th>ano</th>\n",
+       "      <th>periodo</th>\n",
+       "      <th>media_final</th>\n",
+       "      <th>numero_total_faltas</th>\n",
+       "      <th>descricao</th>\n",
+       "      <th>discente</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>57608376</td>\n",
+       "      <td>IMD0017</td>\n",
+       "      <td>PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I</td>\n",
+       "      <td>5N34 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>APROVADO</td>\n",
+       "      <td>9949b3a9ac2ba7c2007d430216c141af</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>57608376</td>\n",
+       "      <td>IMD0017</td>\n",
+       "      <td>PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I</td>\n",
+       "      <td>5N34 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>APROVADO</td>\n",
+       "      <td>9949b3a9ac2ba7c2007d430216c141af</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57608376</td>\n",
+       "      <td>IMD0017</td>\n",
+       "      <td>PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I</td>\n",
+       "      <td>5N34 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>APROVADO</td>\n",
+       "      <td>76d1a58df7668ea7f09899ef533c797a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57608376</td>\n",
+       "      <td>IMD0017</td>\n",
+       "      <td>PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I</td>\n",
+       "      <td>5N34 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>APROVADO</td>\n",
+       "      <td>76d1a58df7668ea7f09899ef533c797a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57608376</td>\n",
+       "      <td>IMD0017</td>\n",
+       "      <td>PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I</td>\n",
+       "      <td>5N34 (24/07/2017 - 16/12/2017)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>REPROVADO POR MÉDIA E POR FALTAS</td>\n",
+       "      <td>ddcb9229e17d0a30646e1ef9fa1b828d</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_turma   codigo                                          nome  \\\n",
+       "0  57608376  IMD0017  PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I   \n",
+       "1  57608376  IMD0017  PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I   \n",
+       "2  57608376  IMD0017  PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I   \n",
+       "3  57608376  IMD0017  PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I   \n",
+       "4  57608376  IMD0017  PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I   \n",
+       "\n",
+       "                descricao_horario   ano  periodo  media_final  \\\n",
+       "0  5N34 (24/07/2017 - 16/12/2017)  2017        2          7.2   \n",
+       "1  5N34 (24/07/2017 - 16/12/2017)  2017        2          7.2   \n",
+       "2  5N34 (24/07/2017 - 16/12/2017)  2017        2          7.1   \n",
+       "3  5N34 (24/07/2017 - 16/12/2017)  2017        2          7.1   \n",
+       "4  5N34 (24/07/2017 - 16/12/2017)  2017        2          0.0   \n",
+       "\n",
+       "   numero_total_faltas                         descricao  \\\n",
+       "0                  8.0                          APROVADO   \n",
+       "1                  8.0                          APROVADO   \n",
+       "2                  8.0                          APROVADO   \n",
+       "3                  8.0                          APROVADO   \n",
+       "4                 26.0  REPROVADO POR MÉDIA E POR FALTAS   \n",
+       "\n",
+       "                           discente  \n",
+       "0  9949b3a9ac2ba7c2007d430216c141af  \n",
+       "1  9949b3a9ac2ba7c2007d430216c141af  \n",
+       "2  76d1a58df7668ea7f09899ef533c797a  \n",
+       "3  76d1a58df7668ea7f09899ef533c797a  \n",
+       "4  ddcb9229e17d0a30646e1ef9fa1b828d  "
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "colunas_relevantes = [\"id_turma\", \"codigo\", \"nome\", \"descricao_horario\", \"ano\", \n",
     "                      \"periodo\", \"media_final\", \"numero_total_faltas\", \"descricao\", \"discente\"]\n",
     "# Merge de turma com as notas dos 3 semestres trabalhados.\n",
     "notas_turma_turma_2017_2 = pd.merge(disciplinas_turma_2017_2, notas_2017_2, on='id_turma')[colunas_relevantes]\n",
     "notas_turma_turma_2017_1 = pd.merge(disciplinas_turma_2017_1, notas_2017_1, on='id_turma')[colunas_relevantes]\n",
-    "notas_turma_turma_2016_1 = pd.merge(disciplinas_turma_2016_1, notas_2016_1, on='id_turma')[colunas_relevantes]\n"
+    "notas_turma_turma_2016_1 = pd.merge(disciplinas_turma_2016_1, notas_2016_1, on='id_turma')[colunas_relevantes]\n",
+    "\n",
+    "notas_turma_turma_2017_2.head()"
    ]
   },
   {
