--- a/Estudo_Faltas_3.ipynb
+++ b/Estudo_Faltas_3.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projeto de Probabilidade: Título a Decidir\n",
-    "por Gildo Augusto, Phelipe Henrique e Wanderson Alves\n",
+    "# Projeto de Probabilidade - Unidade 2:\n",
+    "por Gildo Augusto, Phelipe Henrique e Wanderson Alves.\n",
     "\n",
-    "# 1 - Introdução\n",
+    "## 1 - Introdução\n",
     "\n",
-    "Neste Notebook, mostraremos a influência das faltas no desempenho acadêmico dos alunos, utilizando dados referente ao período dos semestre de 2016.1, 2017.1 e 2017.2 em algumas disciplinas do Bacharelado em Tecnologia da Informação da UFRN (Universidade Federal do Rio Grande do Norte). Para essa representação utilizamos gráficos, através das bibliotecas Seaborn e Matplotlib da linguagem Pyhton 3, que torna possível uma melhor análise.\n",
+    "Neste Notebook, mostraremos a influência das faltas no desempenho acadêmico dos alunos, utilizando dados referente ao período dos semestre de 2016.1, 2017.1 e 2017.2 de algumas disciplinas do Bacharelado em Tecnologia da Informação da UFRN (Universidade Federal do Rio Grande do Norte). Para essa representação utilizamos gráficos, através das bibliotecas Seaborn e Matplotlib da linguagem Pyhton 3, que torna possível uma melhor análise.\n",
     "\n",
     "O Notebook está organizado da maneira a seguir: \n",
     "    - Seção 2: detalhes sobre o dataset que contém informações dos discentes;\n",
@@ -22,18 +22,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 - Dataset Ensino\n",
-    "* As informações presentes no dataset são do Portal de Dados Abertos da UFRN (http://dados.ufrn.br/dataset/turmas)."
+    "## 2 - Informações do Dataset\n",
+    "* As informações presentes no dataset foram retiradas do Portal de Dados Abertos da UFRN (http://dados.ufrn.br/dataset/turmas). Nesse portal está presente informações sobre turmas dos cursos de nível médio, técnico, graduação e pós-graduação da UFRN (Universidade Federal do Rio Grande do Norte)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Boas práticas: criar uma célula com todas as bibliotecas necessárias\n",
-    "# importando as bibliotecas necessárias\n",
+    "# Célula com todas as bibliotecas necessárias\n",
+    "# importando as bibliotecas necessárias para o projeto\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -104,13 +104,13 @@
     "# turmas\n",
     "turmas_url_2016_1 = 'http://bit.do/turmas_ufrn_2016_1'\n",
     "\n",
-    "# matrículas em componentes em 2016.2\n",
+    "# matrículas em componentes em 2016.1\n",
     "notas_url_2016_1 = 'http://bit.do/notas_ufrn_2016_1'\n",
     "\n",
-    "# turmas 2016.2\n",
+    "# turmas 2016.1\n",
     "turmas_2016_1 = pd.read_csv(turmas_url_2016_1, sep=';')\n",
     "\n",
-    "# matriculas em componentes em 2016.2\n",
+    "# matriculas em componentes em 2016.1\n",
     "notas_2016_1 = pd.read_csv(notas_url_2016_1, sep=';')"
    ]
   },
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 - Leitura e Plotagem dos Gráficos (2017.2)\n",
+    "## 3 - Leitura e Plotagem dos Gráficos (2017.2)\n",
     "Para dar início às análises, utilizamos dados referentes ao semestre de 2017.2 das faltas e descrição dos discentes para verificar se a premissa era viável. Para isso selecionamos 8 disciplinas que consideramos importantes da grade do Bacharelado em Tecnologia da Informação e assim gerar os gráficos, cada um contendo 4 caixas que representaram o estado dos alunos em questão."
    ]
   },
@@ -489,8 +489,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4 - Análise Geral (2016.2 ,2017.1, 2017.2)\n",
-    "De modo semelhante ao tópico anterior, analisamos as mesmas disciplinas em um período maior, abrangendo os semestres de 2016.2, 2017.1 e 2017.2, para verificar se realmente se nosso estudo era condizente com aquilo que queríamos comprovar."
+    "## 4 - Análise Geral (2016.1 ,2017.1, 2017.2)\n",
+    "De modo semelhante ao tópico anterior, analisamos as mesmas disciplinas em um período maior, abrangendo os semestres de 2016.1, 2017.1 e 2017.2, para verificar se realmente nosso estudo era condizente com aquilo que queríamos comprovar."
    ]
   },
   {
@@ -547,7 +547,7 @@
     "    dataframes_grupos_2016_1[disciplina] = pd.DataFrame.from_dict(dataframe_montado_2016_1)\n",
     "    \n",
     "# Concatenação para ser gerado um gráficos para um dataframe com a junção dos dataframes de todas as disciplinas trabalhadas\n",
-    "# do semestre de 2016.2\n",
+    "# do semestre de 2016.1\n",
     "dataframe_todos_2016_1 = pd.concat(dataframes_grupos_2016_1.values())"
    ]
   },
@@ -616,8 +616,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5 - Conclusão\n",
-    "Como pode ser observado neste notebook, o índice de faltas dos alunos pode e é um fator agravante na reprovação dos alunos em vários componentes curriculares. O que é preocupante, já que isso também pode representar um índice elevado de desistência por parte dos discentes. Uma solução para isso, poderia ser fazer um acompanhamento das notas desses alunos que possuem um número elevado de faltas, questionar se ele se interessa pela disciplina e/ou possui facilidade em aprende-la, caso contrário saber o motivo pelo qual o próprio não tem motivação para acompanhar as aulas. Da mesma forma, repensar o porque continuamente algumas dessas disciplinas tem apresentado o mesmo histórico alarmante quando se fala nesse assunto."
+    "## 5 - Conclusão\n",
+    "Como pode ser observado neste notebook, o índice de faltas dos alunos pode e é um fator agravante na reprovação dos alunos em vários componentes curriculares. O que é preocupante, já que isso também pode representar um índice elevado de desistência por parte dos discentes. Uma solução para isso seria fazer um acompanhamento das notas desses alunos que possuem um número elevado de faltas, questionar se ele tem interesse pela disciplina e/ou possui facilidade em aprende-la, caso contrário, saber o motivo pelo qual o próprio não tem motivação para acompanhar as aulas. Da mesma forma, repensar o porque algumas dessas disciplinas tem apresentado continuamente o mesmo histórico alarmante quando se fala nesse assunto."
    ]
   }
  ],
