Ajeitando algumas coisas dos markdown

--- a/Estudo_Faltas_4.ipynb
+++ b/Estudo_Faltas_4.ipynb
@@ -13,10 +13,11 @@
     "\n",
     "O Notebook está organizado da maneira a seguir: \n",
     "    - Seção 2: detalhes sobre o dataset que contém informações dos discentes.\n",
-    "    - Seção 3: a representação dos gráficos que mostram a média do número de faltas de algumas disciplinas e a situação do aluno em questão (Aprovado, Aprovado por nota, Reprovado e Reprovados por média e faltas).\n",
-    "    - Seção 4: o gráfico que possui o número médio de faltas dos discentes nas disciplinas mostradas anteriormente\n",
-    "    dos semestres de 2017.2, 2017.1 e 2016.1.\n",
-    "    - Seção 5: a conclusão e apontamentos obtidos através do estudo feito."
+    "    - Seção 3: representação dos gráficos que mostram a média do número de faltas de algumas disciplinas e a situação do \n",
+    "    aluno em questão (Aprovado, Aprovado por nota, Reprovado e Reprovados por média e faltas).\n",
+    "    - Seção 4: gráfico que possui o número médio de faltas dos discentes nas disciplinas mostradas anteriormente dos \n",
+    "    semestres de 2017.2, 2017.1 e 2016.1.\n",
+    "    - Seção 5: conclusão e apontamentos obtidos através do estudo feito."
    ]
   },
   {
@@ -154,9 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -329,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -362,15 +359,13 @@
    "metadata": {},
    "source": [
     "## 3 - Leitura e Plotagem dos Gráficos (2017.2)\n",
-    "Nessa seção fizemos uma análise mais detalhada para o semestre 2017.2. Plotamos o gráfico de velas de algumas disciplinas que consideramos ser as mais relevantes para os primeiros semestres da grade do Bacharelado em Tecnologia da Informação. Em cada gráfico está contido os números para os 4 grupos existentes no resultado final de uma disciplina: Aprovado, aprovado por nota, reprovado e reprovado por média e faltas."
+    "* Nessa seção fizemos uma análise mais detalhada para o semestre 2017.2. Plotamos o gráfico de velas de algumas disciplinas que consideramos ser as mais relevantes para os primeiros semestres da grade do Bacharelado em Tecnologia da Informação. Em cada gráfico está contido os números para os 4 grupos existentes no resultado final de uma disciplina: Aprovado, aprovado por nota, reprovado e reprovado por média e faltas."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -501,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observamos que fica evidente a alta incidência no número de faltas superior dos alunos Reprovados, principalmente em disciplinas como Fundamentos Matemáticos para Computação I e Linguagem de Programação II, onde a mediana excedeu facilmente o terceiro quartil dos Alunos Aprovados por Nota."
+    "* Observamos que fica evidente a alta incidência no número de faltas superior dos alunos Reprovados, principalmente em disciplinas como Fundamentos Matemáticos para Computação I e Linguagem de Programação II, onde a mediana excedeu facilmente o terceiro quartil dos Alunos Aprovados por Nota."
    ]
   },
   {
@@ -509,7 +504,7 @@
    "metadata": {},
    "source": [
     "## 4 - Análise Geral (2016.1 ,2017.1, 2017.2)\n",
-    "De modo semelhante ao tópico anterior, analisamos as mesmas disciplinas em um período maior, abrangendo os semestres de 2016.1, 2017.1 e 2017.2, para verificar se realmente nosso estudo era condizente com aquilo que queríamos comprovar."
+    "* De modo semelhante ao tópico anterior, analisamos as mesmas disciplinas em um período maior, abrangendo os semestres de 2016.1, 2017.1 e 2017.2, para verificar se realmente nosso estudo era condizente com aquilo que queríamos comprovar."
    ]
   },
   {
@@ -577,9 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -634,7 +627,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Através do Gráfico de barras fica visivelmente claro, podemos observar um padrão na média de faltas com relação a situação dos alunos, seja de maneira singular nos gráficos de cada disciplina como também para uma análise mais abrangente dos últimos três semestres."
+    "* Através do Gráfico de barras fica visivelmente claro, podemos observar um padrão na média de faltas com relação a situação dos alunos, seja de maneira singular nos gráficos de cada disciplina como também para uma análise mais abrangente dos últimos três semestres."
    ]
   },
   {
@@ -642,7 +635,7 @@
    "metadata": {},
    "source": [
     "## 5 - Conclusão\n",
-    "Como pode ser observado neste notebook, o índice de faltas dos alunos pode e é um fator agravante na reprovação dos alunos em vários componentes curriculares. O que é preocupante, já que isso também pode representar um índice elevado de desistência por parte dos discentes. Uma solução para isso seria fazer um acompanhamento das notas desses alunos que possuem um número elevado de faltas, questionar se ele tem interesse pela disciplina e/ou possui facilidade em aprende-la, caso contrário, saber o motivo pelo qual o próprio não tem motivação para acompanhar as aulas. Da mesma forma, repensar o porque algumas dessas disciplinas tem apresentado continuamente o mesmo histórico alarmante quando se fala nesse assunto."
+    "* Como pode ser observado neste notebook, o índice de faltas dos alunos pode e é um fator agravante na reprovação dos alunos em vários componentes curriculares. O que é preocupante, já que isso também pode representar um índice elevado de desistência por parte dos discentes. Uma solução para isso seria fazer um acompanhamento das notas desses alunos que possuem um número elevado de faltas, questionar se ele tem interesse pela disciplina e/ou possui facilidade em aprende-la, caso contrário, saber o motivo pelo qual o próprio não tem motivação para acompanhar as aulas. Da mesma forma, repensar o porque algumas dessas disciplinas tem apresentado continuamente o mesmo histórico alarmante quando se fala nesse assunto."
    ]
   }
  ],
@@ -662,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
