--- a/Estudo_Faltas_3.ipynb
+++ b/Estudo_Faltas_3.ipynb
@@ -13,10 +13,11 @@
     "\n",
     "O Notebook está organizado da maneira a seguir: \n",
     "    - Seção 2: detalhes sobre o dataset que contém informações dos discentes;\n",
-    "    - Seção 3: a representação dos gráficos que mostram a média do número de faltas de algumas disciplinas e a situação do aluno em questão (Aprovado, Aprovado por nota, Reprovado e Reprovados por média e por faltas);\n",
-    "    - Seção 4: o gráfico que possui o número médio de faltas dos discentes nas disciplinas mostradas anteriormente\n",
-    "    dos semestres de 2017.2, 2017.1 e 2016.1;\n",
-    "    - Seção 5: a conclusão e apontametos obtidos através do estudo feito."
+    "    - Seção 3: representação dos gráficos que mostram a média do número de faltas de algumas disciplinas e a situação \n",
+    "    do aluno em questão (Aprovado, Aprovado por nota, Reprovado e Reprovados por média e por faltas);\n",
+    "    - Seção 4: gráfico que possui o número médio de faltas dos discentes nas disciplinas mostradas anteriormente dos \n",
+    "    semestres de 2017.2, 2017.1 e 2016.1;\n",
+    "    - Seção 5: conclusão e apontametos obtidos através do estudo feito."
    ]
   },
   {
